chore: update meta data

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nền tảng quản lý WiFi Marketing, định vị indoor và analytics hàng đầu Việt Nam. Tối ưu vận hành, gia tăng doanh thu cho khách sạn, bán lẻ, văn phòng."
+      content="Hệ thống giám sát và quản lý tù nhân tại gia thông minh. Giải pháp Ankle Bracelet Tracker hàng đầu Việt Nam, giúp tối ưu hóa quản lý và đảm bảo an ninh."
     />
     <meta name="robots" content="index, follow" />
     <meta
       name="keywords"
-      content="WiFi, quản lý WiFi, VTC Telecom, hệ thống WiFi, WiFi doanh nghiệp, WiFi Digital, mạng không dây, quản lý mạng, wifi marketing, wifi management, indoor positioning, wifi analytics, vtc telecom, wifi, digital"
+      content="Ankle Bracelet, giám sát tù nhân, VTC Telecom, hệ thống định vị GPS, quản lý tù nhân tại gia, electronic monitoring, prisoner tracking, gps tracker"
     />
     <meta name="author" content="VTC Telecom" />
     <link rel="canonical" href="https://wifi.vtctelecom.com.vn" />
@@ -20,10 +20,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wifi.vtctelecom.com.vn" />
-    <meta property="og:title" content="Ankle Tracker - Hệ thống quản lý WiFi của VTC Telecom" />
+    <meta property="og:title" content="Ankle Tracker - Hệ thống giám sát tù nhân thông minh" />
     <meta
       property="og:description"
-      content="Hệ thống quản lý WiFi của VTC Telecom là một giải pháp toàn diện được phát triển để giúp doanh nghiệp quản lý các thiết bị mạng WiFi và người dùng kết nối một cách tập trung và hiệu quả"
+      content="Hệ thống Ankle Tracker của VTC Telecom giải pháp giám sát tù nhân thông minh, tích hợp GPS/LBS/WiFi giúp quản lý đối tượng hiệu quả và an toàn."
     />
     <meta property="og:image" content="https://www.vtctelecom.com.vn/images/deffiles/viLogo.png" />
     <meta property="og:locale" content="vi_VN" />
@@ -44,7 +44,7 @@
         "name": "VTC Telecom",
         "url": "https://wifi.vtctelecom.com.vn",
         "logo": "https://www.vtctelecom.com.vn/images/deffiles/viLogo.png",
-        "description": "Hệ thống quản lý WiFi của VTC Telecom là một giải pháp toàn diện được phát triển để giúp doanh nghiệp quản lý các thiết bị mạng WiFi và người dùng kết nối một cách tập trung và hiệu quả",
+        "description": "Hệ thống Ankle Tracker của VTC Telecom là giải pháp giám sát tù nhân toàn diện, tích hợp công nghệ định vị tiên tiến.",
         "sameAs": ["https://www.facebook.com/vtctelecomjsc", "https://www.linkedin.com/company/vtc-telecom/"],
         "contactPoint": {
           "@type": "ContactPoint",
@@ -59,12 +59,12 @@
         "@type": "WebApplication",
         "name": "Ankle Tracker",
         "url": "https://wifi.vtctelecom.com.vn",
-        "applicationCategory": "BusinessApplication",
+        "applicationCategory": "SecurityApplication",
         "operatingSystem": "Web Browser",
-        "description": "Hệ thống quản lý WiFi của VTC Telecom",
+        "description": "Hệ thống giám sát và quản lý tù nhân thông minh của VTC Telecom",
         "offers": {
           "@type": "Offer",
-          "category": "WiFi Management System"
+          "category": "Security System"
         }
       }
     </script>
